# django-semantic-analytics

./: README.md  pyproject.toml
django_semantic_analytics/: __init__.py  admin.py  apps.py  models.py
django_semantic_analytics/migrations/: 0001_initial.py
django_semantic_analytics/services/: __init__.py  assembler.py  bouncer.py  coordinator.py  retriever.py
tests/: test_core.py
